# junior_fullstack_task

./: Cargo.toml  README.md
src/: main.rs
