[package]
name = "junior_fullstack_task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
rocket_contrib = { version = "0.4.11", features = ["json"]}
rand = "0.8.5"
chrono = "0.4"
